--- a/index.html
+++ b/index.html
@@ -23,17 +23,17 @@
 <!-- title-->
   <title>Flower Shop website using Bootstrap 5</title>
 </head>
-<div>
+<div class="overflow-hidden">
 <header id="home">
   <!-- navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-4 fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-5 fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand fs-1" href="#">Flower<span class="text-danger"> Shop</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5 text-center">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-4 text-center">
           <li class="nav-item">
             <a class="nav-link active text-danger" aria-current="page" href="#home">Home</a>
           </li>
@@ -170,7 +170,7 @@
        <hr class="w-25 m-auto">
      </div>
      <div class="row" data-aos="zoom-in-up" data-aos-offset="200">
-     <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+     <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-4">
       <div class="card">
         <div class="card-body">
           <i class='bx bx-gift p-2 mb-2'></i>
@@ -180,7 +180,7 @@
         </div>
       </div>
      </div>
-     <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+     <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-4">
       <div class="card bg-danger text-white">
         <div class="card-body">
           <i class='bx bxl-sketch bg-white text-dark p-2 mb-2'></i>
@@ -202,7 +202,7 @@
      </div>
      </div>
      <div class="row my-5" data-aos="zoom-in-down" data-aos-offset="200">
-      <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+      <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-4">
        <div class="card">
          <div class="card-body">
           <i class='bx bx-leaf p-2 mb-2'></i>
@@ -212,7 +212,7 @@
          </div>
        </div>
       </div>
-      <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+      <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-4">
        <div class="card bg-danger text-white">
          <div class="card-body">
           <i class='bx bx-package bg-white p-2 text-dark mb-2' ></i>
@@ -244,7 +244,7 @@
       <hr class="w-25 m-auto">
     </div>
          <div class="row">
-          <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-5">
             <div class="card" data-aos="zoom-in-up">
               <div class="card-body">
                 <img src="images/pexels-h-i-nguy-n-1627264-6800408.jpg" class="img-fluid rounded-circle border border-danger p-2" alt="">
@@ -254,7 +254,7 @@
               </div>
             </div>
           </div>
-          <div class="col-sm-12 col-md-4 col-lg-4 col-12">
+          <div class="col-sm-12 col-md-4 col-lg-4 col-12 mb-5">
             <div class="card" data-aos="zoom-in-down">
               <div class="card-body">
                 <img src="images/pexels-av-photography-12132656 (1).jpg" class="img-fluid rounded-circle border border-danger p-2" alt="">
