--- a/index.html
+++ b/index.html
@@ -340,9 +340,49 @@
  </section>
 
  <!-- footer -->
- <div class="footer">
-  <div class="container-fluid bg-danger text-center text-white p-2 fs-5">Developed by Misbah Noor</div>
- </div>
+ <footer class="bg-light">
+  <div class="content">
+    <div class="first-box">
+      <div class="upper">
+        <div class="topic">About Us</div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+      </div>
+      <div class="lower">
+        <div class="topic">Contact Us</div>
+        <div class="phone">
+          <a href="#"><i class='bx bxs-phone'></i>+922-921-218</a>
+        </div>
+        <div class="email">
+          <a href="#"><i class='bx bxs-envelope'></i>123@gmail.com</a>
+        </div>
+      </div>
+    </div>
+    <div class="middle-box">
+      <div class="topic">Our Services</div>
+      <div><a href="#">Floral Design Workshops</a></div>
+      <div><a href="#">Gifts and Accessories</a></div>
+      <div><a href="#">Free Home Delivery</a></div>
+      <div><a href="#">Flower Arrangements</a></div>
+      <div><a href="#">Plant Sales</a></div>
+    </div>
+    <div class="right-box">
+      <div class="topic">Subscribe Us</div>
+      <form action="#">
+          <input type="text" placeholder="Enter your mail" class="text1">
+          <input type="submit" name="" value="Send" class="text2">
+        <div class="media-icons">
+          <a href="#"><i class='bx bxl-facebook'></i></a>
+          <a href="#"><i class='bx bxl-instagram'></i></a>
+          <a href="#"><i class='bx bxl-twitter'></i></a>
+          <a href="#"><i class='bx bxl-linkedin'></i></a>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="bottom">
+    <p>Copyright &copy; 2024 <a href="#">FlowerShop</a>All rights reserved</p>
+  </div>
+  </footer>
 
 
 <!-- js -->
