--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
 <div class="overflow-hidden">
 <header id="home">
   <!-- navigation Bar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-5 fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light bg-transparent px-4 fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand fs-1" href="#">Flower<span class="text-danger"> Shop</span></a>
+      <a class="navbar-brand fs-1 ms-4" href="#">Flower<span class="text-danger"> Shop</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
